purl/purl-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nba-purl
  labels:
    app: nba-purl
spec:
  replicas: 1
  template:
    metadata:
      name: nba-purl
      labels:
        app: nba-purl
    spec:
      containers:
      - name: nba-purl
        image: atzedevries/docker-nba-purl:v2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: purl-pvc
          mountPath: /opt/jboss/wildfly/standalone/log
        - mountPath: /etc/purl/purl.properties
          name: purl-properties
          subPath: purl.properties 
        - mountPath: /etc/purl/log4j2.xml
          name: log4j2-xml
          subPath: log4j2.xml        
        - mountPath: /opt/jboss/wildfly/standalone/configuration/standalone.xml
          name: standalone-xml
          subPath: standalone.xml
      volumes:
      - name: purl-properties
        configMap:
          name: purl.properties
      - name: standalone-xml
        configMap:
          name: purl.standalone.xml
      - name: log4j2-xml
        configMap:
          name: purl.log4j2.xml
      - name: purl-pvc
        persistentVolumeClaim:
          claimName: purllog
